fixed leaderboard, convert buttons over to boostrap, need to add chart to leaderboard, redo followed leaderboard, stretch nav bar, dropdowns, popups, recent quotes goes in box

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,3 +20,13 @@ h2 {
 form {
   display: inline;
 }
+
+span
+{
+  color:blue;
+    padding-left:15px;
+    padding-right:15px;
+    padding-top:5px;
+    padding-bottom:5px;
+    font-size:1.3em;
+}
